[tool.poetry]
name = "warrior.game"
version = "0.0.1"
description = "The Infernal Adventure: The Quest for Ancient Fire"
authors = ["Rodrigo Novas"]

[tool.poetry.dependencies]
python = ">=3.7"
pygame = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
